# theta-core

./: .gitignore  CLAUDE.md  EXPLAINER.md  IMPROVEMENT_IDEAS.md  LICENSE  NEURAL_MODEL_PLAN.md  PATH.md  README.md  REVIEW_READY_ROADMAP.md  ROADMAP.md  _check_h2_imports.py  _check_stack.sh  _smoke_h3.py  _test_import_v2.py  _test_symmetry_smoke.py  _tmp_analyze_tokens.py  _tmp_bench_load.py  _tmp_bench_vocab.py  _tmp_check_gate3.py  _tmp_check_syntax.py  _tmp_check_tokens2.py  _tmp_corr.py  _tmp_mrr_debug.py  _verify_invariant.py  debug_search.py  mathematical_ai_system.md  model_structure_and_data.md  proof_predictor.pt  proof_predictor_results.json  pyproject.toml
.hermes/: GATES.md  WIN_CONDITIONS.md
checkpoints/: self_play_hidden_var.pt
configs/: frontier_map.yaml  grpo_config.yaml  model_config.yaml  reward_config.yaml  sft_config.yaml
data/: all_unique_lemmas.json  auto_lean_results.json  beam_expansions.json  binary_scorer_gate3.json  era_gate_1905_results.json  era_gate_1920_results.json  era_gate_1950_results.json  era_gate_1970_results.json  era_gate_depth10_results.json  era_gate_multi_cutoff_summary.json  era_gate_results.json  era_gate_template_results.json  eval_baseline_comparison.csv  eval_gate3_fullgraph.csv  eval_wave1_results.csv  extended_era_gate_results.json  final_verification_results.json  frontier_tests.json  gate3_fullgraph_result.json  gate3_v2_triplet_result.json  gate4_fullcpu_result.json  gate4_v2_result.json  goal_only_gate3_verified.json  h1_capacity_results.json  h3_traversal_results.json  hard_neg_full_result.json  (+34 more)
(+677 files in other folders)
