[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mathematical-physics-ai"
version = "0.1.0"
description = "Autonomous Mathematical Physics AI — Phase 1 self-play theorem prover"
requires-python = ">=3.11"

[project.scripts]
prepare-data = "scripts.build.prepare_data:main"
train-sft = "scripts.training.train_sft:main"
train-grpo = "scripts.training.train_grpo:main"
evaluate = "scripts.eval.evaluate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-k \"not slow\"')",
]
